--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./output.css">
 </head>
 <body>
-  <h1></h1>  
+  <h1></h1> 
+  <h1>hello world</h1> 
 </body>
 </html>
